Fix: face registration 500 - wrong method name and argument order
- camera_service.get_latest_frame() -> get_frame() (method doesn't exist)
- face_service.register_owner(name, frame) -> register_owner(frame, name)
- register_owner returns dict not bool, handle .get('success') properly
- Dashboard: check resp.ok before parsing, show proper error messages
- Also fixed /api/face/recognize endpoint (same get_latest_frame bug)

--- a/jarvis/dashboard.html
+++ b/jarvis/dashboard.html
@@ -448,11 +448,18 @@ async function takeSnapshot() {
 async function registerFace() {
     const name = document.getElementById('ownerName').value || 'Sir';
     const status = document.getElementById('regStatus');
+    status.textContent = 'Registering...';
+    status.style.color = 'var(--blue)';
     try {
         const resp = await fetch(`${API}/api/face/register-owner-camera?name=${encodeURIComponent(name)}`, { method: 'POST' });
         const data = await resp.json();
-        status.textContent = data.status === 'success' ? `✅ Registered as "${data.name}"` : `❌ ${data.detail || 'Failed'}`;
-        status.style.color = data.status === 'success' ? 'var(--green)' : 'var(--red)';
+        if (resp.ok) {
+            status.textContent = `✅ Registered as "${data.name}" (${data.total_samples || 1} samples)`;
+            status.style.color = 'var(--green)';
+        } else {
+            status.textContent = `❌ ${data.detail || 'Registration failed'}`;
+            status.style.color = 'var(--red)';
+        }
     } catch (e) {
         status.textContent = '❌ ' + e.message;
         status.style.color = 'var(--red)';
